# nmea-simulator

./: .gitignore  README.md  main.py  pyproject.toml  simulator.py  swell.py
config/: sf-bay-nmea-0183.yaml  sf-bay-nmea-2000.yaml  sf-bay.yaml
nmea_simulator/: __init__.py  simulator.py
nmea_simulator/models/: __init__.py  ais_manager.py  ais_vessel.py  environment.py  route.py  speed_profile.py
nmea_simulator/services/: __init__.py  message_service.py
nmea_simulator/services/nmea2000/: formatter.py  messages.py  pgns.py
nmea_simulator/utils/: __init__.py  navigation_utils.py  vessel_dynamics.py
src/: simulator.py
src/models/: __init__.py  ais_manager.py  ais_vessel.py  environment.py  route.py  speed_profile.py  speed_segment.py
src/services/: __init__.py  message_service.py
src/services/nmea2000/: __init__.py  converter.py  formatter.py  messages.py  pgns.py  utils.py  verifier.py
src/utils/: __init__.py  coordinate_utils.py  navigation_utils.py  vessel_dynamics.py  weather_utils.py
tests/: __init__.py  test_nmea2000.py
