[tool.poetry]
name = "nmea-simulator"
version = "0.1.0"
description = ""
authors = ["Sebastien Rosset"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bitstring = "^4.2.3"
numpy = "^2.1.3"
tk = "^0.1.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
